Feat(eos_cli_config_gen): Add neighbors to router_bgp.address_family_evpn

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-mpls.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-mpls.yml
@@ -45,6 +45,9 @@ router_bgp:
     neighbor_default:
       encapsulation: mpls
       next_hop_self_source_interface: Loopback0
+    neighbors:
+      - ip_address: 192.168.255.3
+        activate: true
     peer_groups:
       - name: EVPN-OVERLAY-PEERS
         activate: true
