--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -90,6 +90,7 @@ jobs:
       - name: Install Python requirements
         run: |
           pip install -r ansible_collections/arista/avd/requirements.txt -r ansible_collections/arista/avd/requirements-dev.txt --upgrade
+          make pyavd-editable-install
       - name: Run pre-commit
         run: |
           pre-commit run --all-files --color always
@@ -146,6 +147,7 @@ jobs:
       - name: 'Install Python requirements'
         run: |
           pip install -r ansible_collections/arista/avd/requirements.txt -r ansible_collections/arista/avd/requirements-dev.txt --upgrade
+          make pyavd-editable-install
 
   # ----------------------------------- #
   # EOS CLI CONFIG GEN MOLECULE
