--- a/ansible_collections/arista/avd/requirements-dev.txt
+++ b/ansible_collections/arista/avd/requirements-dev.txt
@@ -22,4 +22,4 @@ ansible-doc-extractor>=0.1.10
 tox
 pydantic>=2.3.0
 aristaproto[compiler]>=0.1.1
--e ../../../python-avd --config-settings editable_mode=compat
+# Remember to install pyavd as editable by running "make pyavd-editable-install" from the root of the repo.
