--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/autovpn-rr1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/autovpn-rr1.yml
@@ -29,6 +29,10 @@ router_bgp:
     remote_as: '65000'
     ttl_maximum_hops: 1
     route_reflector_client: true
+    bfd_timers:
+      interval: 1000
+      min_rx: 1000
+      multiplier: 10
   - name: WAN-RR-OVERLAY-PEERS
     type: wan
     update_source: Dps1
@@ -37,6 +41,10 @@ router_bgp:
     maximum_routes: 0
     remote_as: '65000'
     ttl_maximum_hops: 1
+    bfd_timers:
+      interval: 1000
+      min_rx: 1000
+      multiplier: 10
   address_family_evpn:
     peer_groups:
     - name: WAN-OVERLAY-PEERS
