--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/bgp_peer_groups.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/bgp_peer_groups.schema.yml
@@ -163,7 +163,24 @@ keys:
             description: Type 7 encrypted password.
           bfd:
             type: bool
-            default: False
+            default: True
+          bfd_timers:
+            type: dict
+            description: |-
+              Specify the BFD timers to override the default values.
+              It is recommended to keep BFD total timeout longer than the DPS timeout.
+              The Default BFD timeout is 10 x 1 seconds and the default DPS timeout is 5 x 1 seconds.
+            $ref: "eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/keys/bfd_timers"
+            keys:
+              interval:
+                type: int
+                default: 1000
+              min_rx:
+                type: int
+                default: 1000
+              multiplier:
+                type: int
+                default: 10
           listen_range_prefixes:
             type: list
             description: |-
@@ -202,6 +219,23 @@ keys:
           bfd:
             type: bool
             default: True
+          bfd_timers:
+            type: dict
+            description: |-
+              Specify the BFD timers to override the default values.
+              It is recommended to keep BFD total timeout longer than the DPS timeout.
+              The Default BFD timeout is 10 x 1 seconds and the default DPS timeout is 5 x 1 seconds.
+            $ref: "eos_cli_config_gen#/keys/router_bgp/keys/peer_groups/items/keys/bfd_timers"
+            keys:
+              interval:
+                type: int
+                default: 1000
+              min_rx:
+                type: int
+                default: 1000
+              multiplier:
+                type: int
+                default: 10
           structured_config:
             type: dict
             description: Custom structured config added under router_bgp.peer_groups.[name=<name>] for eos_cli_config_gen.
