--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -3408,6 +3408,8 @@ keys:
             stage:
               type: str
               required: true
+              description: Stages of maintenance operation. "vrf" stage can be defined
+                for "bgp" only.
               valid_values:
               - after
               - before
@@ -3427,27 +3429,9 @@ keys:
               type: str
               description: VRF name.
             interface:
+              type: str
               description: Trigger condition occurs on maintenance operation of specified
                 interface.
-              type: dict
-              keys:
-                interface_type:
-                  type: str
-                  required: true
-                  valid_values:
-                  - Ethernet
-                  - Fabric
-                  - Loopback
-                  - Management
-                  - Port-Channel
-                  - Tunnel
-                  - Vlan
-                  - Vxlan
-                interface_number:
-                  type: int
-                  convert_types:
-                  - str
-                  required: true
             unit:
               type: str
               description: Name of unit. Trigger condition occurs on maintenance operation
