--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -27,6 +27,14 @@ interface Ethernet1
    Comment created from eos_cli under ethernet_interfaces.Ethernet1
    EOF
 
+   ip igmp host-proxy
+   ip igmp host-proxy 239.0.0.1
+   ip igmp host-proxy 239.0.0.2 exclude [{'source': '10.0.2.1'}]
+   ip igmp host-proxy 239.0.0.3 include [{'source': '10.0.3.1'}]
+   ip igmp host-proxy 239.0.0.4 exclude [{'source': '10.0.4.1'}, {'source': '10.0.4.2'}]
+   ip igmp host-proxy 239.0.0.4 include [{'source': '10.0.4.3'}, {'source': '10.0.4.4'}]
+   ip igmp host-proxy report-interval 2
+   ip igmp host-proxy version 2
 !
 interface Ethernet2
    description SRV-POD02_Eth1
