--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -35,6 +35,14 @@ interface Port-Channel5
    Comment created from eos_cli under port_channel_interfaces.Port-Channel5
    EOF
 
+   ip igmp host-proxy
+   ip igmp host-proxy 239.0.0.1
+   ip igmp host-proxy 239.0.0.2 exclude [{'source': '10.0.2.1'}]
+   ip igmp host-proxy 239.0.0.3 include [{'source': '10.0.3.1'}]
+   ip igmp host-proxy 239.0.0.4 exclude [{'source': '10.0.4.1'}, {'source': '10.0.4.2'}]
+   ip igmp host-proxy 239.0.0.4 include [{'source': '10.0.4.3'}, {'source': '10.0.4.4'}]
+   ip igmp host-proxy report-interval 2
+   ip igmp host-proxy version 2
 !
 interface Port-Channel8
    description to Dev02 Port-channel 8
