--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/filter.vrfs.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/filter.vrfs.cfg
@@ -14,10 +14,10 @@ no aaa root
 vrf instance MGMT
 !
 vrf instance VRF2
-   description This VRF will be configured because it is permitted by filter.vrfs
+   description This VRF is attracted by Loopback and will be configured because it is permitted by filter.allow_vrfs
 !
 vrf instance VRF5
-   description This VRF will be configured because of always_include_vrfs_in_tenants and it is permitted by filter.vrfs
+   description This VRF will be configured because of always_include_vrfs_in_tenants and it is permitted by filter.allow_vrfs
 !
 interface Loopback0
    description EVPN_Overlay_Peering
