--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/filter.vrfs.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/filter.vrfs.yml
@@ -49,11 +49,11 @@ vrfs:
 - name: VRF2
   tenant: TENANT1
   ip_routing: true
-  description: This VRF will be configured because it is permitted by filter.vrfs
+  description: This VRF is attracted by Loopback and will be configured because it is permitted by filter.allow_vrfs
 - name: VRF5
   tenant: TENANT2
   ip_routing: true
-  description: This VRF will be configured because of always_include_vrfs_in_tenants and it is permitted by filter.vrfs
+  description: This VRF will be configured because of always_include_vrfs_in_tenants and it is permitted by filter.allow_vrfs
 management_api_http:
   enable_vrfs:
   - name: MGMT
