--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3512,6 +3512,19 @@ keys:
           type: str
           description: The path-group to which this carrier belongs.
           required: true
+  wan_edge:
+    documentation_options:
+      table: wan-settings
+    type: dict
+    description: 'The `wan_edge` node type was introduced and removed while the AVD
+      WAN feature was in PREVIEW MODE.
+
+      Migrate your existing edge nodes to using `wan_router` node_type.'
+    deprecation:
+      warning: true
+      new_key: wan_router
+      removed: true
+      remove_in_version: 4.6.0-dev1
   wan_ipsec_profiles:
     documentation_options:
       table: wan-settings
@@ -3670,9 +3683,8 @@ keys:
     documentation_options:
       table: wan-settings
     type: dict
-    description: '`wan_transit` node type was removed while AVD WAN development feature
-
-      was in PREVIEW MODE.
+    description: 'The `wan_transit` node type was introduced and removed while the
+      AVD WAN feature was in PREVIEW MODE.
 
       Migrate your existing transit nodes to using `wan_router` node_type and set
 
@@ -3682,7 +3694,7 @@ keys:
       new_key: 'node_type `wan_router` and set `cv_pathfinder_transit_mode: region`
         under node settings'
       removed: true
-      remove_in_version: 4.7.0
+      remove_in_version: 4.6.0-dev1
   wan_virtual_topologies:
     type: dict
     description: 'PREVIEW: WAN Preview
