--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_edge.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/wan_edge.schema.yml
@@ -6,16 +6,15 @@
 # Use Ctrl + Space to get suggestions for every field. Autocomplete will pop up after typing 2 letters.
 type: dict
 keys:
-  wan_transit:
+  wan_edge:
     documentation_options:
       table: wan-settings
     type: dict
     description: |-
-      The `wan_transit` node type was introduced and removed while the AVD WAN feature was in PREVIEW MODE.
-      Migrate your existing transit nodes to using `wan_router` node_type and set
-      `cv_pathfinder_transit_mode: region` under node settings.
+      The `wan_edge` node type was introduced and removed while the AVD WAN feature was in PREVIEW MODE.
+      Migrate your existing edge nodes to using `wan_router` node_type.
     deprecation:
       warning: true
-      new_key: "node_type `wan_router` and set `cv_pathfinder_transit_mode: region` under node settings"
+      new_key: "wan_router"
       removed: true
       remove_in_version: "4.6.0-dev1"
