--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -23,6 +23,18 @@ interface Port-Channel5
    switchport
    switchport trunk allowed vlan 110,201
    switchport mode trunk
+   ip igmp host-proxy
+   ip igmp host-proxy 239.0.0.1
+   ip igmp host-proxy 239.0.0.2 exclude 10.0.2.1
+   ip igmp host-proxy 239.0.0.3 include 10.0.3.1
+   ip igmp host-proxy 239.0.0.4 include 10.0.4.3
+   ip igmp host-proxy 239.0.0.4 include 10.0.4.4
+   ip igmp host-proxy 239.0.0.4 exclude 10.0.4.1
+   ip igmp host-proxy 239.0.0.4 exclude 10.0.4.2
+   ip igmp host-proxy access-list ACL1
+   ip igmp host-proxy access-list ACL2
+   ip igmp host-proxy report-interval 2
+   ip igmp host-proxy version 2
    l2 mtu 8000
    l2 mru 8000
    mlag 5
@@ -35,14 +47,6 @@ interface Port-Channel5
    Comment created from eos_cli under port_channel_interfaces.Port-Channel5
    EOF
 
-   ip igmp host-proxy
-   ip igmp host-proxy 239.0.0.1
-   ip igmp host-proxy 239.0.0.2 exclude [{'source': '10.0.2.1'}]
-   ip igmp host-proxy 239.0.0.3 include [{'source': '10.0.3.1'}]
-   ip igmp host-proxy 239.0.0.4 exclude [{'source': '10.0.4.1'}, {'source': '10.0.4.2'}]
-   ip igmp host-proxy 239.0.0.4 include [{'source': '10.0.4.3'}, {'source': '10.0.4.4'}]
-   ip igmp host-proxy report-interval 2
-   ip igmp host-proxy version 2
 !
 interface Port-Channel8
    description to Dev02 Port-channel 8
